Initial freertos compilation works

--- a/freertos_build/src/FreeRTOSConfig.h.hbs
+++ b/freertos_build/src/FreeRTOSConfig.h.hbs
@@ -1,9 +1,6 @@
 #ifndef FREERTOS_CONFIG_H
 #define FREERTOS_CONFIG_H
 
-/* Here is a good place to include header files that are required across
-your application. */
-#include "something.h"
 
 #define configUSE_PREEMPTION                    1
 #define configUSE_PORT_OPTIMISED_TASK_SELECTION 0
@@ -60,12 +57,13 @@ your application. */
 #define configTIMER_TASK_STACK_DEPTH            configMINIMAL_STACK_SIZE
 
 /* Interrupt nesting behaviour configuration. */
-#define configKERNEL_INTERRUPT_PRIORITY         [dependent of processor]
-#define configMAX_SYSCALL_INTERRUPT_PRIORITY    [dependent on processor and application]
-#define configMAX_API_CALL_INTERRUPT_PRIORITY   [dependent on processor and application]
+#define configKERNEL_INTERRUPT_PRIORITY         1// [dependent of processor]
+#define configMAX_SYSCALL_INTERRUPT_PRIORITY    1// [dependent on processor and application]
+#define configMAX_API_CALL_INTERRUPT_PRIORITY   1// [dependent on processor and application]
 
 /* Define to trap errors during development. */
-#define configASSERT( ( x ) ) if( ( x ) == 0 ) vAssertCalled( __FILE__, __LINE__ )
+// #define configASSERT( ( x ) ) if( ( x ) == 0 ) vAssertCalled( __FILE__, __LINE__ )
+#define configASSERT(x)  ((void)(x))
 
 /* FreeRTOS MPU specific definitions. */
 #define configINCLUDE_APPLICATION_DEFINED_PRIVILEGED_FUNCTIONS 0
