First application build seems working

--- a/freertos_build/src/FreeRTOSConfig.h.hbs
+++ b/freertos_build/src/FreeRTOSConfig.h.hbs
@@ -1,6 +1,7 @@
 #ifndef FREERTOS_CONFIG_H
 #define FREERTOS_CONFIG_H
 
+extern void rust_rtos_panic(int line, const char *file);
 
 #define configUSE_PREEMPTION                    1
 #define configUSE_PORT_OPTIMISED_TASK_SELECTION 0
@@ -62,8 +63,11 @@
 #define configMAX_API_CALL_INTERRUPT_PRIORITY   1// [dependent on processor and application]
 
 /* Define to trap errors during development. */
-// #define configASSERT( ( x ) ) if( ( x ) == 0 ) vAssertCalled( __FILE__, __LINE__ )
-#define configASSERT(x)  ((void)(x))
+#define configASSERT( x ) do { \
+    if( ( x ) == 0 ) { \
+        rust_rtos_panic(__LINE__, __FILE__); \
+    } \
+} while(0);
 
 /* FreeRTOS MPU specific definitions. */
 #define configINCLUDE_APPLICATION_DEFINED_PRIVILEGED_FUNCTIONS 0
